feat(Test) add test 87% code cover